stopysinger-back: test route

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8888
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
