--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -3,6 +3,63 @@ server:
 spring:
   application:
     name: zuul-server
+
+  datasource:
+    url: jdbc:postgresql://heh:5432/urban
+    username: postgres
+    password: tut
+
+    jpa:
+      show-sql: true
+      hibernate:
+        ddl-auto: update
+        naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+      properties:
+        hibernate:
+          dialect:  org.hibernate.dialect.PostgreSQLDialect
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            clientId: 272534186410-ckc6tmnm8asft0qbnnv335k860r.apps.googleusercontent.com
+            clientSecret: DQJzEp5XD3edf-aCuTioas36
+            redirectUriTemplate: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - email
+              - profile
+          facebook:
+            clientId: 121189385277
+            clientSecret: 42fe8326387e0fe16f34132
+            redirectUriTemplate: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - email
+              - public_profile
+          github:
+            clientId: d3e2ddd966fa4352
+            clientSecret: 3bc93076354c2a5bada2f5a05aea60d
+            redirectUriTemplate: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - user:email
+              - read:user
+        provider:
+          facebook:
+            authorizationUri: https://www.facebook.com/v3.0/dialog/oauth
+            tokenUri: https://graph.facebook.com/v3.0/oauth/access_token
+            userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+  app:
+    auth:
+      tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+      tokenExpirationMsec: 864000000
+    oauth2:
+      # After successfully authenticating with the OAuth2 Provider,
+      # we'll be generating an auth token for the user and sending the token to the
+      # redirectUri mentioned by the client in the /oauth2/authorize request.
+      # We're not using cookies because they won't work well in mobile clients.
+      authorizedRedirectUris:
+        - http://localhost:3000/oauth2/redirect
+        - myandroidapp://oauth2/redirect
+        - myiosapp://oauth2/redirect
 management:
   endpoints:
     web:
@@ -13,9 +70,11 @@ eureka:
     register-with-eureka: true
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
+
 zuul:
   routes:
     event-service:
       path: /scheduler/**
     executor-service:
       path: /executor/**
+
