--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -73,8 +73,6 @@ eureka:
 
 zuul:
   routes:
-    event-service:
-      path: /scheduler/**
-    executor-service:
-      path: /executor/**
+    api:
+      path: /api/**
 
