--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8888
+spring.application.name=api
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://77.83.174.207:5432/urban
