--- a/zuul-server/src/main/resources/bootstrap.yml
+++ b/zuul-server/src/main/resources/bootstrap.yml
@@ -1,29 +1,33 @@
 server:
   port: ${port:8080}
+
 spring:
   application:
     name: zuul-server
 
   datasource:
-    url: jdbc:postgresql://heh:5432/urban
+    url: jdbc:postgresql://172.17.0.2:5432/urban
     username: postgres
-    password: tut
+    password:
 
-    jpa:
-      show-sql: true
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
+    properties:
       hibernate:
-        ddl-auto: update
-        naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
-      properties:
-        hibernate:
-          dialect:  org.hibernate.dialect.PostgreSQLDialect
+        dialect:  org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
   security:
     oauth2:
       client:
         registration:
           google:
-            clientId: 272534186410-ckc6tmnm8asft0qbnnv335k860r.apps.googleusercontent.com
-            clientSecret: DQJzEp5XD3edf-aCuTioas36
+            clientId: 156710754963-qlhjno9fnk15pifiq2pi9f7lcjjm.apps.googleusercontent.com
+            clientSecret: APbDd8oE8q5i91E_lLZP
             redirectUriTemplate: "{baseUrl}/oauth2/callback/{registrationId}"
             scope:
               - email
@@ -47,19 +51,19 @@ spring:
             authorizationUri: https://www.facebook.com/v3.0/dialog/oauth
             tokenUri: https://graph.facebook.com/v3.0/oauth/access_token
             userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
-  app:
-    auth:
-      tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
-      tokenExpirationMsec: 864000000
-    oauth2:
-      # After successfully authenticating with the OAuth2 Provider,
-      # we'll be generating an auth token for the user and sending the token to the
-      # redirectUri mentioned by the client in the /oauth2/authorize request.
-      # We're not using cookies because they won't work well in mobile clients.
-      authorizedRedirectUris:
-        - http://localhost:3000/oauth2/redirect
-        - myandroidapp://oauth2/redirect
-        - myiosapp://oauth2/redirect
+app:
+  auth:
+    tokenSecret: 926D96C90030DD58429D2751AC1BDBBC
+    tokenExpirationMsec: 864000000
+  oauth2:
+    # After successfully authenticating with the OAuth2 Provider,
+    # we'll be generating an auth token for the user and sending the token to the
+    # redirectUri mentioned by the client in the /oauth2/authorize request.
+    # We're not using cookies because they won't work well in mobile clients.
+    authorizedRedirectUris:
+      - http://localhost:3000/oauth2/redirect
+      - myandroidapp://oauth2/redirect
+      - myiosapp://oauth2/redirect
 management:
   endpoints:
     web:
@@ -69,7 +73,7 @@ eureka:
   client:
     register-with-eureka: true
     serviceUrl:
-      defaultZone: http://discovery:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 zuul:
   routes:
